--- a/html/PBWAI/PBWAI000000_tablet.html
+++ b/html/PBWAI/PBWAI000000_tablet.html
@@ -88,11 +88,15 @@
 			<div id="container">
 
 				<!-- content -->
-				<div class="content pb0">
+				<div class="content">
 
 					<style>
 						body {
 							background-color: var(--background-bg_lightGray);
+						}
+
+						.main-inner .content {
+							padding-bottom: 0;
 						}
 					</style>
 
