--- a/html/index.html
+++ b/html/index.html
@@ -506,6 +506,22 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>등록</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010002</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 등록</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010002_tablet</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td></td>
 						<td>초기상태</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_nodata</a></td>
@@ -518,6 +534,15 @@
 						<td>수정</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_modify</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 수정</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_modify_tablet</a></td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
