--- a/html/index.html
+++ b/html/index.html
@@ -416,6 +416,19 @@
 							<a href="" class="link inner-arrow">PBWMA000000_skeletone</a>
 						</td>
 					</tr>
+					<tr class="for-tablet">
+						<td>PBWMA</td>
+						<td>메인</td>
+						<td>홈</td>
+						<td></td>
+						<td></td>
+						<td class="al article">
+							<a href="" class="link inner-arrow">PBWMA000000_tablet</a>
+							<br>
+							<a href="" class="link inner-arrow">PBWMA000000_tablet_skeletone</a>
+						</td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
