--- a/html/PBWMA/PBWMA000000_tablet.html
+++ b/html/PBWMA/PBWMA000000_tablet.html
@@ -97,7 +97,7 @@
 
 					<div class="section-tablet section-tablet-half">
 
-						<div class="section" style="padding-bottom:118px;">
+						<div class="section">
 							<!-- visual-headline -->
 							<div class="visual-headline content-fluid">
 								<figure>
@@ -230,9 +230,10 @@
 											</a>
 										</li>
 									</ul>
-									<div class="mt8 ac">
+									<!-- Tablet 더보기 삭제됨 -->
+									<!-- <div class="mt8 ac">
 										<a href="#" class="anchor chevron chevron-down fs-15 py16 gap4">2건 더보기</a>
-									</div>
+									</div> -->
 								</div>
 								<div class="main-schedule-list">
 									<div class="py24">
@@ -242,7 +243,7 @@
 							</div>
 							<!-- main-schedule-section -->
 						</div>
-						<div class="section" style="padding-bottom:118px;">
+						<div class="section">
 							<!-- main-stock-section -->
 							<div class="main-stock-section content-fluid">
 								<div class="main-section-title">
