--- a/html/PBWMA/PBWMA010000.html
+++ b/html/PBWMA/PBWMA010000.html
@@ -166,7 +166,7 @@
 		<!-- //main-inner -->
 
 		<!-- bottom-btn -->
-		<div class="bottom-btn">
+		<div class="bottom-btn bottom-btn-main">
 
 			<div class="main-nav">
 				<ul>
