--- a/html/PBWCL/PBWCL030000.html
+++ b/html/PBWCL/PBWCL030000.html
@@ -116,7 +116,7 @@
 
 
 					<!-- group-form -->
-					<div class="group-form mt16">
+					<div class="group-form">
 						<div class="group-content">
 							<div class="form">
 								<button type="button" class="anchor chevron anchor-fluid anchor-border" data-micromodal-trigger="modal-job"><span class="body-large fw-700">업종 전체</span></button>
@@ -181,6 +181,14 @@
 		<!-- //content end -->
 		<!-- //main-inner -->
 
+		<!-- bottom-btn -->
+		<div class="bottom-btn">
+			<div class="btn-wrap">
+				<button type="button" class="btn-large btn-outlined">초기화</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>조회</button>
+			</div>
+		</div>
+		<!-- //bottom-btn -->
 
 	</main>
 	<!-- //main -->
