--- a/html/index.html
+++ b/html/index.html
@@ -790,6 +790,15 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL000000</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td>[Tablet] 고객기여도 조회</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL000000_tablet</a></td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
@@ -797,6 +806,14 @@
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL020000</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td>[Tablet] 조회 결과</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL020000_tablet</a></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -806,6 +823,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL030000</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td>[Tablet] 기업정보 조회</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL030000_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -813,6 +838,14 @@
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL060000</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td>[Tablet] 검색결과</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL060000_tablet</a></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -822,6 +855,14 @@
 						<td>기업일반</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab01</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>상세</td>
+						<td>[Tablet] 기업일반</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab01_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -829,6 +870,14 @@
 						<td></td>
 						<td>기업신용</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab02</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 기업신용</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab02_tablet</a></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -838,6 +887,14 @@
 						<td>재무정보</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab03</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 재무정보</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab03_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -845,6 +902,14 @@
 						<td></td>
 						<td>종합의견</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab04</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 종합의견</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab04_tablet</a></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -854,6 +919,14 @@
 						<td>연혁</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab05</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 연혁</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab05_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -861,6 +934,14 @@
 						<td></td>
 						<td>경영진현황</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab06</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 경영진현황</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab06_tablet</a></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -870,6 +951,14 @@
 						<td>거래처현황</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab07</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 거래처현황</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab07_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -877,6 +966,14 @@
 						<td></td>
 						<td>주요주주현황</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab08</a></td>
+					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 주요주주현황</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000_tab08_tablet</a></td>
 					</tr>
 				</tbody>
 				<tbody data-folder="PBWFI">
