--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -181,13 +181,8 @@
 									</div>
 								</div>
 								<div class="bottom">
-									<link rel="preconnect" href="https://fonts.googleapis.com">
-									<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-									<link href="https://fonts.googleapis.com/css2?family=42dot+Sans:wght@300..800&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 									<ul>
-										<li style="font-family:'42dot Sans'">LabelⅢ</li>
-										<li style="font-family:'Noto Serif'">LabelⅢ</li>
-										<li style="font-family:'Roboto Slab'">LabelⅢ</li>
+										<li>LabelⅢ</li>
 										<li>CFP(국제공인재무설계사)</li>
 										<li>CFP(국제공인재무설계사)</li>
 										<li>CFP(국제공인재무설계사)</li>
