--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -225,7 +225,7 @@
 					<!-- //memo-list -->
 
 					<div class="btn-wrap">
-						<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo">전체보기</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round">전체보기</button>
 					</div>
 
 					<!-- nodata-wrap -->
@@ -397,80 +397,6 @@
 
 				</div>
 
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-memo">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">메모</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-					<div class="content">
-
-						<div class="memo-user-info">
-							<strong class="title-medium px4">나고객</strong>
-							<div class="group pt0 j-start gap8">
-								<div class="divide-list px4">
-									<span>부서명</span>
-									<div class="division h14 mx8"></div>
-									<span>직책</span>
-								</div>
-								<div class="body-medium fw-400">회사명</div>
-							</div>
-						</div>
-
-						<!-- memo-list -->
-						<div class="memo-list">
-							<div class="memo-inner is-toggled">
-								<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-								<div class="memo-btn">
-									<div class="right">
-										<button type="button" class="btn-noborder" data-micromodal-trigger="modal-memo-write"><i class="ico-modify"></i>수정</button>
-										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
-									</div>
-								</div>
-								<dl>
-									<dt>작성자이름</dt>
-									<dd>2024-11-06 10:48</dd>
-								</dl>
-								<div class="divide-list">
-									<span>부서명</span>
-									<div class="division h14 mx8"></div>
-									<span>부서명</span>
-								</div>
-							</div>
-							<div class="memo-inner is-toggled">
-								<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-								<div class="memo-btn">
-									<div class="right">
-										<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
-										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
-									</div>
-								</div>
-								<dl>
-									<dt>작성자이름</dt>
-									<dd>2024-11-06 10:48</dd>
-								</dl>
-								<div class="divide-list">
-									<span>부서명</span>
-									<div class="division h14 mx8"></div>
-									<span>부서명</span>
-								</div>
-							</div>
-						</div>
-						<!-- //memo-list -->
-
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
