--- a/html/PBWBU/PBWBU020001_memo_tablet.html
+++ b/html/PBWBU/PBWBU020001_memo_tablet.html
@@ -71,7 +71,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>기업정보 조회</h1>
+					<h1>전체 메모</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -90,86 +90,69 @@
 				<!-- content -->
 				<div class="content">
 
-
-					<style>
-						body {
-							background-color: var(--background-bg_lightGray);
-						}
-					</style>
-
-					<!-- customer-card-list -->
-					<div class="customer-card-list mt40">
-						<strong class="search-result">검색결과</strong>
-
-						<div class="section-tablet">
-							<div class="tablet-grid">
-								<a href="#" class="customer-card">
-									<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
-									<div class="info-detail-list p0 bg-white-100">
-										<div class="info-table">
-											<div class="info-body">
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">대표자명</div>
-													<div class="info-td ar">가의정</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">기업상태</div>
-													<div class="info-td ar">정상</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">사업자번호</div>
-													<div class="info-td ar">120-00-00000</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">업종</div>
-													<div class="info-td ar">강선 건조업</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">주소</div>
-													<div class="info-td ar">경기도 성남시 분당구 판교로 227번길(삼평동)</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</a>
-								<a href="#" class="customer-card">
-									<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
-									<div class="info-detail-list p0 bg-white-100">
-										<div class="info-table">
-											<div class="info-body">
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">대표자명</div>
-													<div class="info-td ar">가의정</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">기업상태</div>
-													<div class="info-td ar">정상</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">사업자번호</div>
-													<div class="info-td ar">120-00-00000</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">업종</div>
-													<div class="info-td ar">강선 건조업</div>
-												</div>
-												<div class="info-row">
-													<div class="info-th fc-typography-black px0">주소</div>
-													<div class="info-td ar">경기도 성남시 분당구 판교로 227번길(삼평동)</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</a>
+					<div class="tablet-maxwidth">
+						<div class="memo-user-info">
+							<strong class="title-medium px4">나고객</strong>
+							<div class="group pt0 j-start gap8">
+								<div class="divide-list px4">
+									<span>부서명</span>
+									<div class="division h14 mx8"></div>
+									<span>직책</span>
+								</div>
+								<div class="body-medium fw-400">회사명</div>
 							</div>
 						</div>
-
+						<!-- memo-list -->
+						<div class="memo-list">
+							<div class="memo-inner is-toggled">
+								<div class="tag-wrap mb12">
+									<div class="tags tags-small tags-white tags-round">나만보기</div>
+								</div>
+								<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+								<div class="memo-btn">
+									<div class="right">
+										<button type="button" class="btn-noborder" data-micromodal-trigger="modal-memo-write"><i class="ico-modify"></i>수정</button>
+										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+									</div>
+								</div>
+								<dl>
+									<dt>작성자이름</dt>
+									<dd>2024-11-06 10:48</dd>
+								</dl>
+								<div class="divide-list">
+									<span>부서명</span>
+									<div class="division h14 mx8"></div>
+									<span>부서명</span>
+								</div>
+							</div>
+							<div class="memo-inner is-toggled">
+								<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+								<div class="memo-btn">
+									<div class="right">
+										<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
+										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+									</div>
+								</div>
+								<dl>
+									<dt>작성자이름</dt>
+									<dd>2024-11-06 10:48</dd>
+								</dl>
+								<div class="divide-list">
+									<span>부서명</span>
+									<div class="division h14 mx8"></div>
+									<span>부서명</span>
+								</div>
+							</div>
+						</div>
+						<!-- //memo-list -->
 					</div>
-					<!-- //customer-card-list -->
-
 
 				</div>
 				<!-- //content -->
+
+
+
+
 			</div>
 			<!-- //container -->
 
@@ -181,6 +164,49 @@
 
 	</main>
 	<!-- //main -->
+
+
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-memo-write">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">메모</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content pt16">
+
+						<div class="inp inp-medium">
+							<label>
+								<input type="checkbox">
+								<span class="label-title">나만보기</span>
+							</label>
+						</div>
+
+						<div class="form mt10">
+							<div class="input-wrap">
+								<textarea aria-label="메모"></textarea>
+							</div>
+							<div class="textarea-length">
+								<div class="left">0/300자</div>
+								<div class="right">
+									<button type="button" class="btn-xsmall btn-primary btn-round">저장</button>
+								</div>
+							</div>
+						</div>
+
+						<p class="description error body-small mt10 fc-typography-caption">개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
 
 </body>
 
