--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -193,7 +193,7 @@
 							<ul class="tab-list tab-col overflow-list" role="tablist">
 								<li class="tab tab-active"><a role="tab" href="#">법인/사업자번호</a></li>
 								<li class="tab"><a role="tab" href="#">고객명</a></li>
-								<li class="tab"><a role="tab" href="#">계좌번호</a></li>
+								<!-- <li class="tab"><a role="tab" href="#">계좌번호</a></li> -->
 							</ul>
 						</div>
 						<!-- //tab-content -->
@@ -223,7 +223,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="tel" placeholder="‘-’ 없이 숫자만 입력해주세요." aria-label="검색">
+								<input type="tel" placeholder="‘-’ 없이 숫자만 입력" aria-label="검색">
 								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
