--- a/html/PBWCL/PBWCL000000_tablet.html
+++ b/html/PBWCL/PBWCL000000_tablet.html
@@ -91,66 +91,65 @@
 				<div class="content">
 
 
-					<!-- group-form -->
-					<div class="group-form mt16">
-						<div class="group-title">
-							<strong class="title-medium">통합고객번호 <i class="apos" aria-label="필수 입력">*</i></strong>
-						</div>
-						<div class="group-content">
-							<div class="form">
-								<div class="input-wrap input-btn">
-									<input type="button" value=" " aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
-								</div>
+					<div class="tablet-maxwidth">
+						<!-- group-form -->
+						<div class="group-form mt16">
+							<div class="group-title">
+								<strong class="title-medium">통합고객번호 <i class="apos" aria-label="필수 입력">*</i></strong>
 							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">대상기간</strong>
-						</div>
-						<div class="group-content">
-							<div class="form">
-								<div class="input-wrap input-datepicker">
-									<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month1">2023-11</button>
-									<div class="bul">-</div>
-									<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month2">2024-10</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">처리구분</strong>
-						</div>
-						<div class="group-content">
-							<div class="form">
-								<div class="inp-group">
-									<div class="inp inp-medium">
-										<label>
-											<input type="radio" name="rad002">
-											<span class="label-title">전점 동일인</span>
-										</label>
-									</div>
-									<div class="inp inp-medium">
-										<label>
-											<input type="radio" name="rad002">
-											<span class="label-title">자점 동일인</span>
-										</label>
+							<div class="group-content">
+								<div class="form">
+									<div class="input-wrap input-btn">
+										<input type="button" value=" " aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
 									</div>
 								</div>
 							</div>
 						</div>
+						<!-- //group-form -->
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">대상기간</strong>
+							</div>
+							<div class="group-content">
+								<div class="form">
+									<div class="input-wrap input-datepicker">
+										<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month1">2023-11</button>
+										<div class="bul">-</div>
+										<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month2">2024-10</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">처리구분</strong>
+							</div>
+							<div class="group-content">
+								<div class="form">
+									<div class="inp-group">
+										<div class="inp inp-medium">
+											<label>
+												<input type="radio" name="rad002">
+												<span class="label-title">전점 동일인</span>
+											</label>
+										</div>
+										<div class="inp inp-medium">
+											<label>
+												<input type="radio" name="rad002">
+												<span class="label-title">자점 동일인</span>
+											</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
 					</div>
-					<!-- //group-form -->
 
 
 				</div>
@@ -178,7 +177,7 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-full modal" id="modal-number-search">
+	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-full micromodal-slide-bottom-tablet modal" id="modal-number-search">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 				<div class="modal__header">
@@ -193,100 +192,106 @@
 							<ul class="tab-list tab-col overflow-list" role="tablist">
 								<li class="tab tab-active"><a role="tab" href="#">법인/사업자번호</a></li>
 								<li class="tab"><a role="tab" href="#">고객명</a></li>
-								<li class="tab"><a role="tab" href="#">계좌번호</a></li>
+								<!-- <li class="tab"><a role="tab" href="#">계좌번호</a></li> -->
 							</ul>
 						</div>
 						<!-- //tab-content -->
 
-						<div class="group-form mb8">
-							<div class="group-content">
-								<div class="form">
-									<div class="inp-group">
-										<div class="inp inp-medium">
-											<label>
-												<input type="radio" name="rad003">
-												<span class="label-title">법인</span>
-											</label>
-										</div>
-										<div class="inp inp-medium">
-											<label>
-												<input type="radio" name="rad003">
-												<span class="label-title">사업자</span>
-											</label>
+						<div class="tablet-maxwidth tablet-maxwidth-fluid">
+							<div class="group-form-tablet">
+								<div class="group-form">
+									<div class="group-content">
+										<div class="form">
+											<div class="inp-group no-flex-wrap">
+												<div class="inp inp-medium">
+													<label>
+														<input type="radio" name="rad003">
+														<span class="label-title nowrap">법인</span>
+													</label>
+												</div>
+												<div class="inp inp-medium">
+													<label>
+														<input type="radio" name="rad003">
+														<span class="label-title nowrap">사업자</span>
+													</label>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
+								<!-- form -->
+								<div class="form" style="max-width:525px;">
+									<div class="label"></div>
+									<div class="input-wrap input-btn">
+										<input type="tel" placeholder="‘-’ 없이 숫자만 입력" aria-label="검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+									</div>
+									<p class="validate-text"></p>
+								</div>
+								<!-- //form -->
 							</div>
 						</div>
-
-						<!-- form -->
-						<div class="form">
-							<div class="label"></div>
-							<div class="input-wrap input-btn">
-								<input type="tel" placeholder="‘-’ 없이 숫자만 입력해주세요." aria-label="검색">
-								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
-							</div>
-							<p class="validate-text"></p>
-						</div>
-						<!-- //form -->
 
 
 						<!-- division-center -->
 						<div class="division-center content-fluid bg-background-bg_lightGray px16 py40 mt16">
 
-							<!-- customer-card-list -->
-							<div class="customer-card-list">
-								<strong class="search-result">검색결과</strong>
-								<a href="#" class="customer-card">
-									<strong class="title-medium">홍길동</strong>
-									<dl class="group">
-										<dt>실명번호</dt>
-										<dd>1013456123</dd>
-									</dl>
-									<dl class="group">
-										<dt>실명번호구분</dt>
-										<dd>사업자등록번호</dd>
-									</dl>
-									<dl class="group">
-										<dt>통합고객번호</dt>
-										<dd>10219022371</dd>
-									</dl>
-									<dl class="group">
-										<dt>여권발급국가</dt>
-										<dd>99</dd>
-									</dl>
-									<dl class="group">
-										<dt>잠재고객여부</dt>
-										<dd>Y</dd>
-									</dl>
-								</a>
-
-								<a href="#" class="customer-card" data-micromodal-close>
-									<strong class="title-medium">홍길동</strong>
-									<dl class="group">
-										<dt>실명번호</dt>
-										<dd>1013456123</dd>
-									</dl>
-									<dl class="group">
-										<dt>실명번호구분</dt>
-										<dd>사업자등록번호</dd>
-									</dl>
-									<dl class="group">
-										<dt>통합고객번호</dt>
-										<dd>10219022371</dd>
-									</dl>
-									<dl class="group">
-										<dt>여권발급국가</dt>
-										<dd>99</dd>
-									</dl>
-									<dl class="group">
-										<dt>잠재고객여부</dt>
-										<dd>Y</dd>
-									</dl>
-								</a>
+							<div class="section-tablet">
+								<!-- customer-card-list -->
+								<div class="customer-card-list">
+									<strong class="search-result">검색결과</strong>
+									<div class="tablet-grid tablet-grid-3">
+										<a href="#" class="customer-card">
+											<strong class="title-medium">홍길동</strong>
+											<dl class="group gap8">
+												<dt>실명번호</dt>
+												<dd>1013456123</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>실명번호구분</dt>
+												<dd>사업자등록번호</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>통합고객번호</dt>
+												<dd>10219022371</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>여권발급국가</dt>
+												<dd>99</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>잠재고객여부</dt>
+												<dd>Y</dd>
+											</dl>
+										</a>
+										<a href="#" class="customer-card" data-micromodal-close>
+											<strong class="title-medium">홍길동</strong>
+											<dl class="group gap8">
+												<dt>실명번호</dt>
+												<dd>1013456123</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>실명번호구분</dt>
+												<dd>사업자등록번호</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>통합고객번호</dt>
+												<dd>10219022371</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>여권발급국가</dt>
+												<dd>99</dd>
+											</dl>
+											<dl class="group gap8">
+												<dt>잠재고객여부</dt>
+												<dd>Y</dd>
+											</dl>
+										</a>
+									</div>
+								</div>
+								<!-- //customer-card-list -->
 							</div>
-							<!-- //customer-card-list -->
 
 						</div>
 						<!-- //division-center -->
