--- a/html/index.html
+++ b/html/index.html
@@ -590,6 +590,15 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001_memo</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 전체 메모</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001_memo_tablet</a></td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
