--- a/html/index.html
+++ b/html/index.html
@@ -1430,7 +1430,7 @@
 			//add anchor
 			if (this.attributes.href.value === "") {
 				$(this).attr({
-					href: `/html/${linkFolder}/${linkName}.html`,
+					href: `./${linkFolder}/${linkName}.html`,
 					target: "_blank",
 				});
 			} else {
