--- a/html/PBWBU/PBWBU010002_tablet.html
+++ b/html/PBWBU/PBWBU010002_tablet.html
@@ -145,11 +145,6 @@
 								</div>
 							</div>
 							<!-- //group -->
-						</div>
-
-
-						<!-- section-tablet-right -->
-						<div class="section-tablet-right">
 							<!-- group -->
 							<div class="group-form mt40">
 								<div class="group-title pl8 pr16 py16 bg-surface-surface50 br8">
@@ -162,6 +157,16 @@
 								</div>
 							</div>
 							<!-- //group -->
+
+							<div class="is-tablet">
+								<p class="description error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+							</div>
+						</div>
+
+
+						<!-- section-tablet-right -->
+						<div class="section-tablet-right">
+
 
 							<!-- group-form -->
 							<div class="group-form mt40">
@@ -343,7 +348,9 @@
 							</div>
 							<!-- //group-form -->
 
-							<p class="description error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+							<div class="is-mobile">
+								<p class="description error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+							</div>
 						</div>
 					</div>
 					<!-- //section-tablet -->
